# mudslide

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yml  .travis.yml  CLAUDE.md  Doxyfile  LICENSE.md  README.md  adaptor_model.py  even_sampling.py  fssh.py  mypy.ini  pyproject.toml  readme_example.py  roadmap_1.0.md  setup.py  surface.py  tullymodels.py
check/: check_trace.py  run_test  test.py
docs/: conf.py  fssh.rst  index.rst  installation.rst  intro.rst  modules.rst  requirements.txt  trajectory.rst
fssh/: __init__.py  __main__.py  batch.py  cumulative_sh.py  ehrenfest.py  electronics.py  even_sampled_sh.py  even_sampling.py  exceptions.py  fssh.py  integration.py  models.py  propagation.py  surface.py  tracer.py  trajectory.py  trajectory_sh.py  typing.py
mudslide/: TMModel.py  __init__.py  __main__.py  adiabatic_md.py  adiabatic_propagator.py  afssh.py  amu_to_au.py  batch.py  collect.py  config.py  constants.py  cumulative_sh.py  ehrenfest.py  electronics.py  even_sampling.py  exceptions.py  harmonic_model.py  header.py  integration.py  io.py  math.py  models.py  mud.py  openmm_model.py  periodic_table.py  propagation.py  propagator.py  qmmm_model.py  scattering_models.py  surface.py  surface_hopping_md.py  surface_hopping_propagator.py  tracer.py  trajectory_md.py  trajectory_sh.py  turbo_make_harmonic.py  turbomole_model.py  typing.py  units.py  util.py  (+2 more)
test/: test_adiabatic_md.py  test_adiabatic_propagator.py  test_afssh.py  test_boltzmann_velocity.py  test_cli.py  test_collect.py  test_freeh_parser.py  test_harmonic.py  test_header.py  test_io.py  test_mains.py  test_math.py  test_openmm.py  test_qmmm.py  test_quadrature.py  test_scattering_models.py  test_spawnstack.py  test_tracer.py  test_tracer_extended.py  test_traj_gen.py  test_trajectories.py  test_tully_avoided_crossing.py  test_turbo_make_harmonic.py  test_turbomole-es.py  (+2 more)
(+177 files in other folders)
